--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
             <a href="{{twitter}}"><i class="fa fa-twitter fa-2x"></i></a>
             <a href="{{linkedin}}"><i class="fa fa-linkedin-square fa-2x"></i></a>
             <a href="{{github}}"><i class="fa fa-github fa-2x"></i></a>
+            <a href="{{youtube}}"><i class="fa fa-youtube-play fa-2x"></i></a>
+
         </div>
     </div>
 </BODY>
