--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <a href="{{linkedin}}"><i class="fa fa-linkedin-square fa-2x"></i></a>
             <a href="{{github}}"><i class="fa fa-github fa-2x"></i></a>
             <a href="{{youtube}}"><i class="fa fa-youtube-play fa-2x"></i></a>
+            <a href="{{resume}}"><i class="fa fa-file-pdf-o"></i></a>
 
         </div>
     </div>
