--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </TITLE>
 </HEAD>
 
-<BODY>
+<BODY ng-cloak>
     <div class="row">
         <div class="col-md-7">
             <div class=" text-center">
@@ -32,10 +32,10 @@
                 <p>Hi! I'm a <strong>Computer Science Masters</strong> student at Old Dominion University</p>
                 <p>I work as a <strong>Full-Stack Developer</strong> on campus, utilizing technologies like <strong>JavaScript, PHP, jQuery, SQL, NoSQL.</strong></p>
 
-                <p> I have also worked on projects for various classes including a Stack-Overflow clone and a <strong>watchOS (iOS) app</strong> that collects accelerometer and gyroscope data. I'm currently working on an <strong>Android app</strong> for finding friends based on activities.</p>
-                <p> I graduate in May 2018 and am <strong>actively seeking a software developer position</strong>. Check out my <a href="{{resume}}">resume</a>!</p>
+                <p> I have worked on projects for various classes including a <a href="{{highside}}"><strong>Stack-Overflow clone</strong></a> and a <a href="{{triathlon}}"><strong>watchOS (iOS) app</strong></a> that collects accelerometer and gyroscope data. I'm currently working on an <strong>Android app</strong> for finding friends based on activities.</p>
+                <p> I graduate in May 2018 and am <strong>actively seeking a software developer position</strong>. Check out my <a href="{{resume}}"><strong>resume</strong></a>!</p>
 
-                <p>Other than programming, I enjoy going on trips on my motorcycle. I also fix motorcycles as a side gig. I make motorcycle videos on <a href "{{youtube}}" class="yt">YouTube</a> where I have over 1000 subscribers. </p>
+                <p>Other than programming, I enjoy going on trips on my motorcycle. I also fix motorcycles as a side gig. I make motorcycle videos on <a href="{{youtube}}"><strong>YouTube</strong></a> where I have over 1000 subscribers. </p>
             </div>
         </div>
         <div class="col-md-5">
