--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <p>I work as a <strong>Full-Stack Developer</strong> on campus, utilizing technologies like <strong>JavaScript, PHP, jQuery, SQL, NoSQL.</strong></p>
 
                 <p> I have worked on projects for various classes including a <a href="{{highside}}"><strong>Stack-Overflow clone</strong></a> and a <a href="{{triathlon}}"><strong>watchOS (iOS) app</strong></a> that collects accelerometer and gyroscope data. I'm currently working on an <a href="{{herdr}}"><strong>Android app</strong></a> for finding friends based on activities.</p>
-                <p> I graduate in May 2018 and am <strong>actively seeking a software developer position</strong>. Check out my <a href="{{resume}}"><strong>resume</strong></a>!</p>
+                <p> I graduate in May 2018 and am <strong>actively seeking a software developer position in Atlanta, GA</strong>. Check out my <a href="{{resume}}"><strong>resume</strong></a>!</p>
 
                 <p>Other than programming, I enjoy going on trips on my motorcycle. I also fix motorcycles as a side gig. I make motorcycle videos on <a href="{{youtube}}"><strong>YouTube</strong></a> where I have over 1000 subscribers. </p>
             </div>
