--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <div class="intro">
             <p>Hi! I'm a web developer with a <strong>MS in Computer Science</strong> from Old Dominion University.</p>
-            <p>I spent the past year working as an <strong>Associate Software Developer</strong> at Gather Technologies, utilizing <strong>TypeScript, AngularJS, ReactJS, Jest, RethinkDB.</strong></p>
+            <p>I spent the past year working as an <strong>Associate Software Developer</strong> at Gather Technologies, utilizing <strong>TypeScript, AngularJS, ReactJS, Jest, RethinkDB</strong> in an <strong>agile environment.</strong></p>
 
             <p> Other than web development, I have worked on various projects such as a <a href="{{triathlon}}"><strong>watchOS (iOS) app</strong></a> that collects accelerometer and gyroscope data. I also worked on an <a href="{{herdr}}"><strong>Android app</strong></a> for finding friends based on activities.</p>
             <p> I am <strong>actively seeking a software developer position in Atlanta, GA</strong>. Check out my <a href="{{resume}}"><strong>resume</strong></a>!</p>
