Tin Roof update

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </HEAD>
 
 <BODY ng-cloak class="all">
-    <div class="left">
+    <div class="pic" alt="profile">
         <div class="text-center">
             <h1 class="jumbo-h1">{{firstName + " " + lastName}}</h1>
             <div id="links" class="center button-group">
@@ -26,17 +26,7 @@
                 <a href="{{youtube}}"><i class="fa fa-youtube-play fa-2x"></i></a>
             </div>
         </div>
-        <div class="intro">
-            <p>Hi! I'm a web developer with a <strong>MS in Computer Science</strong> from Old Dominion University.</p>
-            <p>I spent the past year working as an <strong>Associate Software Developer</strong> at Gather Technologies, utilizing <strong>TypeScript, AngularJS, ReactJS, Jest, RethinkDB</strong> in an <strong>agile environment.</strong></p>
-
-            <p> Other than web development, I have worked on various projects such as a <a href="{{triathlon}}"><strong>watchOS (iOS) app</strong></a> that collects accelerometer and gyroscope data. I also worked on an <a href="{{herdr}}"><strong>Android app</strong></a> for finding friends based on activities.</p>
-            <p> I am <strong>actively seeking a software developer position in Atlanta, GA</strong>. Check out my <a href="{{resume}}"><strong>resume</strong></a>!</p>
-
-            <p>When not working on programming, I enjoy going on trips on my motorcycle. I also make motorcycle videos on <a href="{{youtube}}"><strong>YouTube</strong></a> where I have over 1500 subscribers. </p>
-        </div>
-    </div>
-    <img src="pictures/profile.jpg" class="right" alt="profile">
+    </div> 
 </BODY>
 
 </HTML>
